--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
@@ -25,6 +26,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.1.0",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "unplugin-auto-import": "^0.17.1",
